Tworzymy stonę główną

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,130 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  background-color: #3F4E55;
+}
+
+.container {
+  display: flex;
+  height: 100vh;
+}
+
+.left, .right {
+  background-color: #3F4E55;
+}
+
+.left {
+  width: 70%;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5); /* Shadow on the right side */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.right {
+  width: 30%;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5); /* Shadow on the left side */
+  display: flex;
+  flex-direction: column;
+}
+
+.bottom {
+  height: 20%;
+  background-color: #3F4E55; /* Same background color */
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  display: flex;
+  height: 100vh;
+}
+
+.left, .right {
+  background-color: #3F4E55;
+}
+
+.left {
+  width: 70%;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5); /* Shadow on the right side */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.right {
+  width: 30%;
+  box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5); /* Shadow on the left side */
+  display: flex;
+  flex-direction: column;
+}
+
+.upper {
+  height: 80%;
+  background-color: #3F4E55; /* Same background color */
+  display: flex;
+  align-items: center; /* Center vertically */
+  justify-content: flex-start; /* Align to the left horizontally */
+}
+
+.bottom {
+  height: 20%;
+  background-color: #3F4E55; /* Same background color */
+  display: flex;
+  align-items: center; /* Center vertically */
+  justify-content: flex-start; /* Align to the left horizontally */
+}
+
+.logo-text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* Align items to the left */
+}
+
+.logo-text img {
+  margin-bottom: 10px; /* Adjust the spacing between the image and the text */
+}
+
+.logo-text p {
+  color: white;
+  font-size: 40px;
+  font-family: 'Segoe UI', sans-serif;
+  font-weight: 500;
+  margin: 0;
+}
+
+.logo-text p span {
+  display: block;
+}
+
+.App {
+  text-align: left;
+}
+
+
+
+.logo-text p span {
+  display: block;
+}
+
+.logo-text p.darwin-text {
+  color: #A4A751;
+  font-size: 40px;
+  font-family: 'Segoe UI', sans-serif;
+  font-weight: 500;
+  margin: 0;
+}
+
+
+.darwin-text {
+  font-family: 'Darwin Pro', sans-serif;
+  font-weight: 500;
+  color: #d6d6d2;
+  margin: 0;
+  font-size: 40px; /* Adjust the font size as needed */
+}
