--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,43 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.upper {
+  height: 80%;
+  background-color: #3F4E55;
+  display: flex;
+  align-items: center;
+  padding-left: 0px;
+}
+
+.link-border {
+  border: 1px solid #b7c84c;
+  border-left-width: 1px;
+  border-left-style: solid;
+  border-left-color: rgb(183, 200, 76);
+  border-left: none;
+  border-radius: 0 5px 5px 0;
+  color: #b7c84c;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  padding: 8px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.link-border:hover {
+  background-color: #657144;
+  color: #fff;
+}
+
+.bottom {
+  color: white;
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.bottom:hover {
+  color: #a7b84c;
+}
