--- a/frontend/src/components/HowToUse.css
+++ b/frontend/src/components/HowToUse.css
@@ -1,31 +1,28 @@
-.img-margin-right {
-    margin-right: 10px;
-    vertical-align: middle;
-}
-
-.container {
+#container_first_page {
     width: 100%;
+    height: auto;
+    background-color: #3F4E55;
+    text-align: center;
 }
 
-@media (max-width: 800px) {
-    .text_how_to_use {
-        width: 95%;
-        margin: 0 auto;
-    }
+#text_how_to_use {
+    color: white;
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+    text-align: justify;
+}
+#text_how_to_use{
+    color: white;
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+
 }
 
-.how_use_container {
-    display: flex;
-    align-items: center;
-}
-
-@media (max-width: 768px) {
-    .how_use_container {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .how_use_img {
-        margin-bottom: 2px; /* Adjust as needed */
-    }
+.paragr{
+    margin: 0 auto;
+    text-align: justify;
+    color: white;
+    padding: 10px;
 }
