poprawianie ścieżek n abackendzie 2

--- a/backend/views/partials/nav.ejs
+++ b/backend/views/partials/nav.ejs
@@ -24,7 +24,7 @@
               <a class="nav-link <%- url.includes('/admin/profil') ? 'active' : '' %>" href="/admin/profil">Profil</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/logout">Wyloguj</a>
+              <a class="nav-link" href="/admin/logout">Wyloguj</a>
             </li>
           <% } %>
         </ul>
